Clean up E2EE enc/dec
